# anki-csv

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  ankicsv.py  environment.yaml  pyproject.toml
.github/workflows/: ci.yaml
tests/: comment.csv  duplicate_key.csv  escaped_comma.csv  missing_value.csv  multiline.csv  starting_emptyspace.csv  superfluous_comma.csv  test_ankicsv.py
